static/2022/css/main.css
/* ... */
#abstractExample.collapse:not(.show) {
  display: block;

  /* height = lineheight * no of lines to display */
  height: 4.5em;
  overflow: hidden;
}

#abstractExample.collapsing {
  height: 4.5em;
}

#absShow.collapsed::after {
  content: "+ Show More";
}

#absShow:not(.collapsed)::after {
  content: "- Show Less";
}

body .carousel-control-next,
body .carousel-control-prev {
  width: 5%;
}

.icon_video,
.icon_cal {
  fill: var(--icon-color);
}

.icon_video:hover,
.icon_cal:hover {
  fill: #000;
}

.checkbox-paper {
  /*opacity: 0.2;*/
  color: #fcfcfc;
  font-size: 14pt;
  font-weight: bold;
  cursor: pointer;
  transition-duration: 100ms;
}

.checkbox-bookmark {
  color: #ddd;
  font-size: 18pt;
  font-weight: bold;
  cursor: pointer;
  transition-duration: 100ms;
}

/* #calendar {
  font-family: "Fira Sans Condensed Light", sans-serif;
} */

/* specific event colours are set in config.yml */
.tui-full-calendar-time-schedule-content,
.tui-full-calendar-time-schedule-content-time {
  border-color: var(--main-border-color) !important;
  font-weight: 400;
}

.tui-full-calendar-time-date-schedule-block:hover {
  color: var(--accent-color);
}

.checkbox-paper.selected {
  opacity: 1;
  color: #6c757d;
}

.checkbox-bookmark.selected {
  opacity: 1;
  color: var(--accent-color);
}

hr {
  border-bottom: 2px;
  border-style: dashed;
  border-color: var(--accent-color);
  border-top-width: 0;
  position: relative;
  margin-top: 3rem;
  margin-bottom: 3rem;

  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

hr::after {
  border: 2px solid var(--accent-color);
  position: absolute;
  border-radius: 9999px;
  content: "";
  right: -14px;
  top: -4px;
  width: 6px;
  height: 6px;
  box-sizing: content-box;
}

/* faq page styling */

#tab-faq .card-header,
#tab-faq .card-body,
#tab-gather .card-header,
#tab-gather .card-body
{
  font-family: "Fira Sans", sans-serif;
}

/* all_events styling */

.event-card {
  font-size: 1 rem;
  height: 100%;
}

.event-card .event-title{
  font-family: "Zilla Slab SemiBold", serif;
  font-size: 1.4rem;
  margin-bottom: 0.5rem;
  color: var(--text-dark-color);
}

.event-card .event-room{
  font-family: "Zilla Slab SemiBold", serif;
  font-size: 0.8rem;
  margin-bottom: 0.5rem;
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
  color: var(--text-dark-color);
}

.event-card .event-time {
  font-family: "Fira Sans", sans-serif;
  font-size: 0.8rem;
  letter-spacing: .01em;
  color: var(--text-dark-color);
}

.event-card .event-url{
  font-family: "Fira Sans", sans-serif;
  font-size: 0.8rem;
  letter-spacing: .01em;
  color: var(--text-gray-color);
  margin-bottom: 0.25rem;

}

/* combined styling (schedule listing, event, session, paper) */

.nav-breadcrumb ol.breadcrumb {
  padding: 0.75rem 0;
  background-color: transparent;
  font-size: 0.85rem;
}

/* h1 */
.session-list-event,
.session-title,
.paper-title,
.session-list-title
{
  font-family: "Zilla Slab SemiBold", serif;
  color: var(--text-heading-color);
}

/* h3 */
.session-list-session,
.paper-authors,
.event-organizers,
.event-url
{
  font-family: "Fira Sans", sans-serif;
  color: var(--text-dark-color);
  font-size: 1.875rem;
}

.session-chair,
.session-url
{
  font-family: "Fira Sans", sans-serif;
  color: var(--text-dark-color);
  font-size: 1.4rem;
}

div.session-url {
  font-size: 1rem;
}

/* h5 */
.session-list-date,
.session-date,
.event-date,
.paper-link,
.paper-presentation,
.speaker-name
{
  /* placeholder; add styles here */
  font-family: "Fira Sans", sans-serif;
  color: var(--text-dark-color);
  text-decoration: none;
}

/* h5 */
.paper-details-heading,
.speaker-title,
.speaker-details-heading {
  font-family: "Zilla Slab SemiBold", serif;
  color: var(--text-heading-color);
}

/* h5 */
.session-list-presenter
{
  /* placeholder; add styles here */
  text-decoration: none;
}

/* info/non-paragraph text */
.session-list-info,
.session-info,
.session-list-type
{
  /* placeholder; add styles here */
  font-family: "Fira Sans", sans-serif;
  color: var(--text-dark-color);
  text-decoration: none;
}

/* session lists */

.second-sticky-top {
  top: 80px;
  width: 100%;
  z-index: 1000;
  background-color: white;
  margin-bottom: -10px;
  padding-top: 10px;
  padding-bottom: 20px;
}

.session-listing {
  border-left: 5px solid transparent;
}

.event-faceting,
.legend-item {
  /* text-transform: uppercase; */
  letter-spacing: 0.025em;
  font-size: 1rem;
  padding-bottom: 0.5rem;
  font-family: "Fira Sans SemiBold", sans-serif;
}

.session-type {
  display: block;
  text-transform: uppercase;
  letter-spacing: 0.025em;
  font-size: 1rem;
  padding-bottom: 0.5rem;
  font-family: "Fira Sans SemiBold", sans-serif;
}

.session-list-title .fas {
  font-size: 0.8em;
}

/* session page styling */

.session-chair .fas,
.session-date .fas
{
  font-size: 0.75em;
  vertical-align: baseline;
}

.session-links {
  padding-top: 3rem;
}

.alert-link {
  text-decoration: underline;
}

.integration-description {
  color: var(--icon-color);
  font-size: 0.85rem;
}

.integration-description emph {
  color: var(--accent-color);
}

/* paper page styling */

.paper-award {
  display: inline-block;
  text-transform: uppercase;
  font-size: 1rem;
  color: var(--accent-color);
  outline: 2px solid var(--accent-color);
  outline-offset: 6px;
}


/* awards styling */

/*.award-card-wrapper{*/
/*  z-index: 100;*/
/*}*/
.award-card {
  font-size: 1rem;
  height: 100%;
  position: relative;
  z-index: 0;
}

.award-card > * {
  z-index: 5;
}
.award-card:before {
    content: "\f091";  /* this is your text. You can also use UTF-8 character codes as I do here */
    font-family: "Font Awesome 5 Free";
    left: calc(50% - 25px);
    position:absolute;
    top: calc(50% - 25px);
    font-size: 50px;
    color: #f0f0f0;
    z-index: -1;
 }

.award-card .award-title{
  font-family: Fira Sans, sans-serif;
  font-size: 1 rem;
  color: var(--text-dark-color);
  letter-spacing: .01em;
  font-weight: bold;
}
/* ... */

